Another little edit

--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
           be imposed than the one that was applicable at the time the penal offence was committed.</li>
       </ol>
     <h2>Article 12</h2>
-      <p>No one shall be subjected to arbitrary interference with his privacy, family, home or correspondence, nor to
-        attacks upon his honour and reputation. Everyone has the right to the protection of the law against such
-        interference or attacks.</p>
+      <p>No one shall be subjected to arbitrary interference with his privacy, family, home or correspondence, nor to attacks upon his honour and reputation. Everyone has the right to the protection of the law against such interference or attacks.</p>
     <h2>Article 13</h2>
       <ol>
         <li>Everyone has the right to freedom of movement and residence with in the borders of each State.</li>
@@ -73,8 +71,7 @@
     <h2>Article 14</h2>
       <ol>
         <li>Everyone has the right to seek and to enjoy in other countries asylum from persecution.</li>
-        <li>This right may not be invoked in the case of prosecutions genuinely arising from non-political crimes or from
-          acts contrary to the purposes and principles of the United Nations.</li>
+        <li>This right may not be invoked in the case of prosecutions genuinely arising from non-political crimes or from acts contrary to the purposes and principles of the United Nations.</li>
       </ol>
     <h2>Article 15</h2>
       <ol>
@@ -83,12 +80,9 @@
       </ol>
     <h2>Article 16</h2>
       <ol>
-        <li>Men and women of full age, without any limitation due to race, nationality or religion, have the right to marry
-          and to found a family. They are entitled to equal rights as to marriage, during marriage and at its dissolution.
-        </li>
+        <li>Men and women of full age, without any limitation due to race, nationality or religion, have the right to marry and to found a family. They are entitled to equal rights as to marriage, during marriage and at its dissolution.</li>
         <li>Marriage shall be entered into only with the free and full consent of the intending spouses.</li>
-        <li>The family is the natural and fundamental group unit of society and is entitled to protection by society and the
-          State.</li>
+        <li>The family is the natural and fundamental group unit of society and is entitled to protection by society and the State.</li>
       </ol>
     <h2><a href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf">Articles 17 to 30</a></h2>
 
