--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         <li>Marriage shall be entered into only with the free and full consent of the intending spouses.</li>
         <li>The family is the natural and fundamental group unit of society and is entitled to protection by society and the State.</li>
       </ol>
-    <h2><a href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf">Articles 17 to 30</a></h2>
-
+    <h2>
+      <a href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf">Articles 17 to 30</a>
+    </h2>
   </body>
   </html>
